--- a/DefectClassification.GUI/DefectClassification.GUI.csproj
+++ b/DefectClassification.GUI/DefectClassification.GUI.csproj
@@ -6,10 +6,15 @@
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+    <ApplicationIcon>Assets\ntu.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Assets\ntu.ico" />
   </ItemGroup>
 
   <ItemGroup>
